# BusinessRuleAIAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/chroma/: chroma.sqlite3
data/uploads/: 12686d9d-6428-422c-a856-61c225e1b521_ORR_Regional_Overrides_ACTIVE.md  162aa6b6-4525-4fc7-842a-25e2c4b1f618_ORR_Policy_Manual_v1_4_ACTIVE.docx  337adb82-7b07-4fba-a447-c857848be4a9_ORR_Workflow_and_Decision_Notes.md  d2414f21-0a2a-4cdc-a86e-b01a02c74ab4_ORR_Policy_Manual_v1_3_ARCHIVED.docx
rag_app/: main.py  orchestrator.py  synthesis.py  vector_store.py
rag_app/parsers/: business_rule_parser.py  input_file_parser.py  query_parser.py
review_app/: main.py  orchestrator.py  review_service.py  synthesis.py  workflow.py
review_app/parsers/: input_file_parser.py  query_parser.py  rag_input_file_parser.py
shared/: config.py  llm.py  models.py  retrieval.py  review_prompts.py  storage.py
tests/: test_business_rule_parser.py  test_retrieval.py  test_review_prompts.py  test_review_service.py
